# Kalshi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OVERNIGHT_REPORT.md  PROJECT_BRIEF.md  README.md  RESEARCH_MILLIONAIRE_TRADERS.md  RUN.bat  RUN.ps1  SESSION_SUMMARY.md  ai_provider.py  alerts.py  backtest.py  bot.py  bot_state.json  btc_trader.py  chain_reactor.py  config.py  contract_matcher.py  dashboard.html  dashboard.py  dashboard_standalone.html  deploy.sh  discover_kalshi.py  docker-compose.yml  edge_detector.py  edge_scanner.py  exchange.py  flow_analyzer.py  ghpages_publisher.py  index.html  kalshi.py  kalshi_client.py  kalshi_dashboard.html  live_scanner.py  load_bot_state.js  market_scanner.py  multi_account.py  (+30 more)
kalshi-arb/: .env.example  .gitignore  CLAUDE.md  ONE_CLICK.bat  PASTE_PEM.bat  README.md  fly.toml  migrate_to_new_repo.bat  one_click.ps1  paste_pem.ps1  pyproject.toml  run_probe.bat  setup.bat  start_dashboard.bat  start_dashboard.sh  start_paper.bat  verify_dashboard.bat  verify_paper_cli.bat  verify_prod_probe.bat
kalshi-arb/config/: paper_config.yaml
kalshi-arb/docs/: live-migration.md  turso-setup.md
kalshi-arb/docs/archived-fly/: Dockerfile  README.md  deploy-dashboard.md
kalshi-arb/kalshi_arb/: __init__.py  _paths.py  cli.py  clock.py  config.py  log.py
kalshi-arb/kalshi_arb/common/: __init__.py  errors.py  gates.py
kalshi-arb/kalshi_arb/dashboard/: __init__.py  app.py  config.py  csv_export.py  launcher.py  main.py  queries.py  ratelimit.py  sse.py
kalshi-arb/kalshi_arb/dashboard/static/: dash.js
kalshi-arb/kalshi_arb/dashboard/templates/: base.html  login.html
kalshi-arb/kalshi_arb/dashboard/templates/tabs/: news.html  opportunities.html  overview.html  pnl.html  system-health.html  trades.html
kalshi-arb/kalshi_arb/executor/: __init__.py  coid.py  degraded_mode.py  executor.py  kalshi_api.py  killswitch.py  live.py  paper.py  types.py
kalshi-arb/kalshi_arb/paper/: __init__.py  fake_ws.py  runner.py
kalshi-arb/kalshi_arb/probe/: analysis.py  probe.py
kalshi-arb/kalshi_arb/rest/: client.py
kalshi-arb/kalshi_arb/scanner/: SIZER_INTERFACE.md  __init__.py  book.py  fees.py  opportunity.py  scanner.py
kalshi-arb/kalshi_arb/sizer/: EXECUTOR_INTERFACE.md  __init__.py  sizer.py  types.py
kalshi-arb/kalshi_arb/store/: __init__.py  backend.py  db.py  libsql_backend.py  schema.sql  sqlite_backend.py
kalshi-arb/kalshi_arb/tools/: pykalshi_contract_audit.py  simulate_events.py  verify_dashboard.py  verify_paper_cli.py
kalshi-arb/kalshi_arb/ws/: consumer.py
kalshi-arb/scripts/: validate_powershell.sh
kalshi-arb/tests/: fakes.py  fees_test.yaml  test_book.py  test_dashboard.py  test_dashboard_launcher.py  test_dashboard_tabs.py  test_executor.py  test_fees.py  test_paper.py  test_paper_cli.py  test_paper_runner.py  test_paper_skip_probe_gate.py  test_pipeline.py  test_probe_analysis.py  test_probe_cli.py  test_probe_diagnostics.py  test_probe_error_surface.py  test_probe_pykalshi_api.py  test_probe_pykalshi_field_shapes.py  test_probe_real_pykalshi.py  test_probe_suite.py  test_pykalshi_contract_audit_ci.py  test_scanner.py  test_sizer.py  test_sse.py  test_sse_e2e.py  test_store.py  test_store_abstraction.py
kalshi-arb/tests/fixtures/: dashboard_data.py
templates/: dashboard.html
